<resources>
    <string name="app_name">KomalliApp</string>
    <string name="nombre_fei_mayus">FACULTAD DE ESTADÍSTICA E INFORMATICA</string>
    <string name="categoria">Categoría</string>
    <string name="producto">Producto:</string>
    <string name="precio">Precio:</string>
    <string name="plus">+</string>
    <string name="nombre_uv_mayus">UNIVERSIDAD VERACRUZANA</string>
    <string name="regresar">Regresar</string>
    <string name="pago">Pago</string>
    <string name="metodos_de_pago">Métodos de pago</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="productos_poulares">Productos poulares</string>
    <string name="categoriaAlt">Categoria:</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="ayuda_y_documentacion">Ayuda y Documentación</string>
    <string name="info_metodo_pago">Métodos de Pago: Los métodos de pago disponibles son por tarjeta y pago en efectivo.\n\nUna vez se haya realizado el pago por tarjeta no se podra realizar cambios en los datos proporcionados</string>
    <string name="info_komalli">Acerca de Komalli: Komalli es un comedor universitario inaugurado en febrero del 2024 ubicado en la facultad de estadística e informática.</string>
    <string name="orden_vacia">La orden está vacía</string>
    <string name="regresar_menu">Regresar al menú</string>
    <string name="menu">Menú</string>
    <string name="total_pagar">Total a pagar: $%d</string>
</resources>