<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCategoria">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:background="#33b249"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_fei_mayus"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_komalli"
        android:layout_width="96dp"
        android:layout_height="82dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_volutariado2"
        app:layout_constraintStart_toEndOf="@+id/iv_comedores2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/komalli2" />

    <ImageView
        android:id="@+id/iv_volutariado2"
        android:layout_width="96dp"
        android:layout_height="82dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/voluntariado" />

    <ImageView
        android:id="@+id/iv_comedores2"
        android:layout_width="96dp"
        android:layout_height="82dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comedores" />

    <ImageView
        android:id="@+id/br_menuA"
        android:layout_width="29dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="204dp"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/categoria"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_categoria"
        app:layout_constraintBottom_toTopOf="@id/lyt_bottom">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#33b249"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_uv_mayus"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>